/*
 * $Id: ChangeLog,v 1.395 2007-09-06 04:59:51 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-09-05 23:54 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_altsyntax.ch
  * include/i_button.ch
  * include/i_checkbox.ch
  * source/h_button.prg
  * source/h_checkbox.prg
    * CHECKBUTTON is converted to a BUTTON's subclass.
    * TButton is converted to a TImage's subclass.
    ! Reverted image background when button is disabled.

2007-09-02 19:35 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/winprint.prg
    ! Fixed preview refreshing.

2007-08-28 01:10 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/winprint.prg
    ! Fixed (I hope) image display when preview uses scrollbars.

2007-08-19 23:42 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_image.prg
    ! Fixed image display.

2007-08-13 10:44 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    + added support for italic print, very hard to complete this feature in
      hbprinter... it has a very strange problem changing font atributes.

2007-08-10 22:11 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    ! Fixed WM_HELP message processing.
  * source/h_menu.prg
    + TMenu():EndMenu() and TMenuItem():EndPopUp() methods added.

2007-08-10 8:52 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_error.prg
    ! update control version.

2007-08-09 16:31 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    ! fix warnings because declared vars and not used.

2007-08-08 9:49 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    * optimize printdata method to excelprint (more speed)
    + added printimage method to excelprint.
  * source/h_windows.prg
    * optimize object in print method with ( with object )
